<resources>
    <string name="app_name">Duelisto</string>
    <string name="login">LOGIN</string>
    <string name="signin">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_free_account">Create an free account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phonenumber">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="or">Or</string>
    <string name="click_here_to_login">Click here to login.</string>
    <string name="have_account">Have account?</string>
    <string name="gender">Gender</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>