<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:title="Profile Menu"
        android:titleTextColor="@android:color/white" />

    <ImageView
        android:id="@+id/profileimageslidemenu"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/usernameslidemenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="@font/rubiksemibold"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/profilebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:fontFamily="@font/rubiksemibold"
        android:textColor="@color/textcolor"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primary" />


    <Button
        android:id="@+id/logoutbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:fontFamily="@font/rubiksemibold"
        android:textColor="@color/textcolor"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


</LinearLayout>
