<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondary"
    tools:context=".ProfileSettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profilelayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/img"
            android:elevation="40sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/emailprofilelayout">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/settingprofileimg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/settingprofilename"
                app:shapeAppearanceOverlay="@style/RoundedImage"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/settingprofilename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="NAME"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="@font/rubiksemibold"
                app:layout_constraintTop_toBottomOf="@+id/settingprofileimg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/profilelayout"
                tools:ignore="HardcodedText" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/editprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_edit"
                android:filterTouchesWhenObscured="true"
                android:layout_marginBottom="200sp"
                android:layout_marginStart="370sp"
                app:shapeAppearanceOverlay="@style/RoundedImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailprofilelayout"
            android:layout_width="323dp"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:textColorHint="@color/primary"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilelayout"
            app:layout_constraintBottom_toTopOf="@+id/passwordprofilelayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileemail"
                android:layout_width="323dp"
                android:layout_height="match_parent"
                android:ems="15"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10sp"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:fontFamily="@font/rubiksemibold"
                android:textColor="@color/black"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                tools:ignore="Deprecated" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordprofilelayout"
            android:layout_width="323dp"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:textColorHint="@color/primary"
            android:layout_marginBottom="20sp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailprofilelayout"
            app:layout_constraintBottom_toTopOf="@+id/numberprofilelayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profilepass"
                android:layout_width="323dp"
                android:layout_height="match_parent"
                android:ems="15"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10sp"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:fontFamily="@font/rubiksemibold"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numberprofilelayout"
            android:layout_width="323dp"
            android:layout_height="60dp"
            android:hint="@string/phonenumber"
            android:textColorHint="@color/primary"
            android:layout_marginBottom="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordprofilelayout"
            app:layout_constraintBottom_toTopOf="@+id/dobprofilelayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profilephone"
                android:layout_width="323dp"
                android:layout_height="match_parent"
                android:ems="15"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10sp"
                android:inputType="phone"
                android:autofillHints="phone"
                android:fontFamily="@font/rubiksemibold"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dobprofilelayout"
            android:layout_width="323dp"
            android:layout_height="60dp"
            android:hint="@string/date_of_birth"
            android:textColorHint="@color/primary"
            android:layout_marginBottom="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberprofilelayout"
            app:layout_constraintBottom_toTopOf="@+id/profilegenderRadioGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profiledob"
                android:layout_width="323dp"
                android:layout_height="match_parent"
                android:ems="15"
                android:inputType="date"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="10sp"
                android:fontFamily="@font/rubiksemibold"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/profilegender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:fontFamily="@font/rubiksemibold"
            android:textColor="@color/black"
            android:layout_marginTop="32sp"
            app:layout_constraintTop_toBottomOf="@+id/dobprofilelayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profilegenderRadioGroup"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <RadioGroup
            android:id="@+id/profilegenderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@+id/dobprofilelayout"
            app:layout_constraintStart_toEndOf="@+id/profilegender_label"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/profilemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:fontFamily="@font/rubiksemibold"
                />

            <RadioButton
                android:id="@+id/profilefemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:fontFamily="@font/rubiksemibold"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/profileother"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:fontFamily="@font/rubiksemibold"
                android:textColor="@color/black"/>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profilesavebtn"
            android:layout_width="1.5in"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/gradient"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:outlineProvider="paddedBounds"
            android:layout_marginBottom="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilegenderRadioGroup"
            app:layout_constraintBottom_toTopOf="@+id/profilebackbtn"
            tools:ignore="InOrMmUsage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profilebackbtn"
            android:layout_width="1.5in"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/gradient"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:outlineProvider="paddedBounds"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilegenderRadioGroup"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="InOrMmUsage" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
